--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,6 +22,12 @@ hr{
 		background: #444;
 	}
 }
+p{
+	width: 100%;
+	@media screen and (min-width: 600px) {
+		width: 30%;
+	}
+}
 .source-sans-pro{
 	font-family: $source;
 	color: #444;
@@ -35,7 +41,6 @@ hr{
 		font-size: 18px;
 	}
 	p{
-		width: 30%;
 		font-size: 16px;
 		font-weight: 500;
 		
@@ -64,7 +69,6 @@ hr{
 		font-size: 18px;
 	}
 	p{
-		width: 30%;
 		font-size: 16px;
 		font-weight: 500;
 		
@@ -91,7 +95,6 @@ hr{
 		font-size: 18px;
 	}
 	p{
-		width: 30%;
 		font-size: 16px;
 		font-weight: 500;
 		
